--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/uuid": "^10.0.0",
     "@vapi-ai/web": "^2.3.10",
     "ai": "^5.0.28",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +34,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "zod": "^4.1.4"
   },
   "devDependencies": {
